force-app/main/default/objects/Project__c/fields/Application_Watch_List__c.field-meta.xml
<CustomField>
    <fullName>Application_Watch_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Watch List</label>
    <type>Checkbox</type>
</CustomField>