force-app/main/default/objects/Project__c/fields/Business_Solutions_Watch_List__c.field-meta.xml
<CustomField>
    <fullName>Business_Solutions_Watch_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Solutions Watch List</label>
    <type>Checkbox</type>
</CustomField>