force-app/main/default/objects/Project__c/fields/Current_Stage_Health__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage_Health__c</fullName>
    <label>Current Stage Health</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
                <color>#FF0000</color>
                <label>Red</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
                <color>#FFFF66</color>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Green</fullName>
                <color>#33CC00</color>
                <label>Green</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>