force-app/main/default/objects/Project__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A brief description of the project, it's purpose, goals, etc...</description>
    <inlineHelpText>A brief description of the project, it's purpose, goals, etc...</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>