force-app/main/default/objects/Project__c/fields/Executive_Watch_List__c.field-meta.xml
<CustomField>
    <fullName>Executive_Watch_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Executive Watch List</label>
    <type>Checkbox</type>
</CustomField>