force-app/main/default/objects/Project__c/fields/Exit_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Exit_Criteria__c</fullName>
    <description>Key Capabilities / Deliverables</description>
    <inlineHelpText>For Stage 0, Planning, Discover and Define Phase this section is for the exiting Stage 0.  Otherwise, the exit criteria / key capabilities / deliverables are listed to determine what success looks like after implementation.</inlineHelpText>
    <label>Exit Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>