force-app/main/default/objects/Project__c/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <label>Funding Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Portfolio</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>External - IE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>