force-app/main/default/objects/Project__c/fields/Funding_Status__c.field-meta.xml
<CustomField>
    <fullName>Funding_Status__c</fullName>
    <label>Funding Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Seeking Funding</fullName>
            </value>
            <value>
                <fullName>Released for Stage</fullName>
            </value>
            <value>
                <fullName>Released for Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>