force-app/main/default/objects/Project__c/fields/HCL_Work_Request__c.field-meta.xml
<CustomField>
    <fullName>HCL_Work_Request__c</fullName>
    <label>HCL Work Request #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>