force-app/main/default/objects/Project__c/fields/IE_Quick_Start_Number__c.field-meta.xml
<CustomField>
    <fullName>IE_Quick_Start_Number__c</fullName>
    <label>IE Quick Start Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>