force-app/main/default/objects/Project__c/fields/Information_Mgmt_Watch_List__c.field-meta.xml
<CustomField>
    <fullName>Information_Mgmt_Watch_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Information Mgmt Watch List</label>
    <type>Checkbox</type>
</CustomField>