force-app/main/default/objects/Project__c/fields/Ops_Infrastructure_Watch_List__c.field-meta.xml
<CustomField>
    <fullName>Ops_Infrastructure_Watch_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ops/ Infrastructure Watch List</label>
    <type>Checkbox</type>
</CustomField>