force-app/main/default/objects/Project__c/fields/Overall_PM__c.field-meta.xml
<CustomField>
    <fullName>Overall_PM__c</fullName>
    <label>Overall PM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>