force-app/main/default/objects/Project__c/fields/Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>Project_Stage__c</fullName>
    <label>Project Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Define</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Develop-Build</fullName>
            </value>
            <value>
                <fullName>Develop-Test</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
            <value>
                <fullName>Planning</fullName>
            </value>
            <value>
                <fullName>Execution</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>