force-app/main/default/objects/Project__c/fields/Project_State__c.field-meta.xml
<CustomField>
    <fullName>Project_State__c</fullName>
    <label>Project State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>In Flight</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>On Going</fullName>
            </value>
            <value>
                <fullName>Consider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>