force-app/main/default/objects/Project__c/fields/Technology_Owner__c.field-meta.xml
<CustomField>
    <fullName>Technology_Owner__c</fullName>
    <label>Technology Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>