force-app/main/default/objects/Project__c/fields/Work_Stream__c.field-meta.xml
<CustomField>
    <fullName>Work_Stream__c</fullName>
    <label>Work Stream</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dot Com</fullName>
            </value>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>EIM-Data</fullName>
            </value>
            <value>
                <fullName>Workday - HR</fullName>
            </value>
            <value>
                <fullName>Workday - Finance</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>