force-app/main/default/objects/Project__c/fields/Work_Stream_PM__c.field-meta.xml
<CustomField>
    <fullName>Work_Stream_PM__c</fullName>
    <label>Work Stream PM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>