force-app/main/default/objects/Project__c/fields/Workday_ID__c.field-meta.xml
<CustomField>
    <fullName>Workday_ID__c</fullName>
    <label>Workday ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>