force-app/main/default/objects/Project__c/fields/X1st_Constraint_Output__c.field-meta.xml
<CustomField>
    <fullName>X1st_Constraint_Output__c</fullName>
    <label>1st Constraint Output</label>
    <type>TextArea</type>
</CustomField>