force-app/main/default/objects/Project__c/fields/X2nd_Constraint__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Constraint__c</fullName>
    <label>2nd Constraint</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Schedule</fullName>
            </value>
            <value>
                <fullName>Scope</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>