force-app/main/default/objects/Project__c/fields/X2nd_Constraint_Output__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Constraint_Output__c</fullName>
    <label>2nd Constraint Output</label>
    <type>TextArea</type>
</CustomField>