force-app/main/default/objects/Project__c/fields/X3rd_Constraint_Output__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Constraint_Output__c</fullName>
    <label>3rd Constraint Output</label>
    <type>TextArea</type>
</CustomField>