force-app/main/default/objects/Project__c/listViews/Executive_Watch_List.listView-meta.xml
<ListView>
    <fullName>Executive_Watch_List</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Project_Stage__c</columns>
    <columns>Business_Owner__c</columns>
    <columns>Current_Stage_Health__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Executive_Watch_List__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Executive Watch List</label>
</ListView>